# mujoco_wrappers

./: CMakeLists.txt  README.md  package.xml  train.py
assets/franka_panda/collision/: .MATLABDriveTag
assets/franka_panda/visual/: .MATLABDriveTag
controllers/: __init__.py  ik_arm.py
envs/: ur10_env.py
log/: joint_angles.csv  trajectory_tracking.csv
models/: README.md
models/azure_kinectDK/: scene.xml  scene_ur10.xml  ur10_kinect copy.urdf  ur10_kinect.urdf  ur10_kinect.xml
models/azure_kinectDK/assets/: mount_v2.STL
models/azure_kinectDK/meshes/: Azure Kinect DK.STL  mount_v2.STL
models/chin_crb7/: chin_crb7.xml  chin_wiping_sphere.xml  chin_wiping_surface.xml
models/franka_panda/: franka_panda.xml  panda.xml
models/jaka_zu12/: jaka.xml  jaka_wiping_sphere.xml  jaka_wiping_surface.xml  jaka_zu12.xml  scene.xml
models/jaka_zu12/assets/: EDEFF.STL
models/kinect_dk/: ur10_kinect.urdf  ur10_kinect.xml
models/kinect_dk/assets/: Azure Kinect DK.STL
models/reorientation_cube/: reorientation_cube.xml
models/robotiq_2f85/: 2f85.urdf
models/scene/: cube_ur10_scene.xml
models/ur10/: scene.xml  ur10.xml
nodes/: pd_publisher.py
script/: mujoco_controller.py  mujoco_publisher.py  pd_publisher_with_compensator.py  position_mpc_publisher.py  position_publisher.py  torque_mpc_publisher.py  torque_publisher.py
script/gufic/: GUFIC_README.md  gufic_publisher.py  misc_func.py
test/: imu_publisher_test.py  imu_test.py
xml/: chin_crb7.xml  franka_panda.xml  jaka_zu12.xml
