<?xml version="1.0"?>
<package format="3">
  <name>mujoco_publisher</name>
  <version>0.0.1</version>
  <description>mujoco ros2 publisher</description>
  <maintainer email="Chen.WH@sjtu.edu.cn">ChenWH</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>